@@ -1,128 +1,107 @@
 package com.example.mainservice.DTO;
 
-import java.util.Collections;
+import com.example.mainservice.Service.WbftAlgorithm;
+
+import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.Collectors;
 
 /**
- * Przechowuje stan jednej rundy głosowania WBFT dla konkretnego użytkownika.
+ * Stan jednej rundy konsensusu dla danego użytkownika.
  *
- * Żywotność obiektu:
- * ─────────────────
- * Tworzony gdy nadejdzie pierwszy głos dla userId.
- * Niszczony (usuwany z mapy w VoteAggregatorService) gdy:
- *   a) zebrano głosy od wszystkich 7 serwisów → WBFT uruchamiany natychmiast,
- *   b) minął ROUND_TIMEOUT_MS od startu → WBFT uruchamiany przez scheduler,
- *   c) zebrano MIN_VOTES_FOR_EARLY_WBFT głosów → WBFT uruchamiany wcześniej.
+ * Zmiana względem oryginału (warstwa security):
+ * ──────────────────────────────────────────────
+ * Dodano pole roundId (UUID) generowane przy tworzeniu rundy.
+ * roundId jest przekazywany do WbftAlgorithm.compute() i służy do:
+ * - śledzenia zużytych głosów (anty-replay)
+ * - wykrywania equivocation
+ * - logowania i monitoringu
  */
 public class RoundState {
 
-    /** Maksymalny czas oczekiwania na wszystkie głosy (30 sekund). */
-    public static final long ROUND_TIMEOUT_MS = 30_000;
+    public static final int  TOTAL_NODES              = 7;
+    public static final int  MIN_VOTES_FOR_EARLY_WBFT = 5;
+    public static final long ROUND_TIMEOUT_MS         = 30_000L;
+
+    private final int    userId;
 
     /**
-     * Liczba głosów wystarczająca do wcześniejszego uruchomienia WBFT
-     * (bez czekania na wszystkich 7). Wartość 5 = ponad 2/3 węzłów.
+     * Unikalny identyfikator rundy – generowany przy każdym nowym RoundState.
+     * Format: "u{userId}-{UUID skrócony do 8 znaków}"
+     * Przykład: "u42-3f8a1b2c"
      */
-    public static final int MIN_VOTES_FOR_EARLY_WBFT = 5;
+    private final String roundId;
 
-    /** Łączna liczba węzłów satelitarnych (Service1…Service7). */
-    public static final int TOTAL_NODES = 7;
+    private final long   startTime = System.currentTimeMillis();
 
-    /* ── pola ── */
-
-    private final int  userId;
-    private final long startTime;
-
-    /**
-     * Zebrane głosy: serviceName → ServiceMessage.
-     * ConcurrentHashMap — VoteListener i scheduler mogą pisać/czytać z różnych wątków.
-     */
+    /** serviceName → głos. ConcurrentHashMap dla bezpieczeństwa wątkowego. */
     private final Map<String, ServiceMessage> votes = new ConcurrentHashMap<>();
 
-    /** Czy runda została już zakończona (przez WBFT lub timeout). */
-    private volatile boolean finished = false;
-
-    /* ── konstruktor ── */
+    /** Atomowa flaga – runda zakończona dokładnie raz. */
+    private final AtomicBoolean finished = new AtomicBoolean(false);
 
     public RoundState(int userId) {
-        this.userId    = userId;
-        this.startTime = System.currentTimeMillis();
+        this.userId  = userId;
+        this.roundId = "u" + userId + "-" + UUID.randomUUID().toString().substring(0, 8);
     }
 
-    /* ── mutacje ── */
+    // ── Mutacje ───────────────────────────────────────────────────────────────
 
-    /**
-     * Rejestruje głos serwisu. Istniejący głos dla danego serwisu jest nadpisywany
-     * (zabezpieczenie przed duplikatami z RabbitMQ).
-     *
-     * @param serviceName identyfikator serwisu (np. "Service3")
-     * @param message     odebrany głos
-     */
     public void addVote(String serviceName, ServiceMessage message) {
         votes.put(serviceName, message);
     }
 
-    /** Oznacza rundę jako zakończoną (idempotent). */
+    /**
+     * Atomowe oznaczenie rundy jako zakończonej.
+     * @return true jeśli to wywołanie zamknęło rundę (pierwsze);
+     *         false jeśli runda była już zamknięta.
+     */
     public boolean markFinished() {
-        if (finished) return false;
-        finished = true;
-        return true;
+        return finished.compareAndSet(false, true);
     }
 
-    /* ── zapytania ── */
+    // ── Warunki zakończenia ───────────────────────────────────────────────────
 
-    /**
-     * Czy runda powinna zostać zakończona teraz?
-     *
-     * Warunki (sprawdzane w kolejności):
-     * 1. Zebrano głosy od wszystkich TOTAL_NODES węzłów → natychmiastowe WBFT.
-     * 2. Minął ROUND_TIMEOUT_MS od startu → WBFT na zebranych głosach
-     *    (o ile mamy MIN_VOTES_FOR_EARLY_WBFT, inaczej NO_DATA).
-     *
-     * Celowo NIE uruchamiamy WBFT po samym fakcie zebrania MIN_VOTES_FOR_EARLY_WBFT —
-     * brakujące serwisy mogą być po prostu wolniejsze, nie wadliwe.
-     * Miękkie kworum stosujemy tylko jako fallback po upływie timeoutu.
-     */
+    /** Pełna liczba głosów LUB osiągnięto kworum miękkie. */
     public boolean shouldFinish() {
-        if (finished) return false;
-        if (votes.size() >= TOTAL_NODES) return true;
-        return isTimedOut();
+        return votes.size() >= TOTAL_NODES
+                || votes.size() >= MIN_VOTES_FOR_EARLY_WBFT;
     }
 
-    /**
-     * Czy po timeoucie mamy wystarczająco głosów żeby uruchomić WBFT?
-     * Jeśli nie — scheduler zwróci NO_DATA zamiast uruchamiać algorytm.
-     */
+    /** Czy zebrano wystarczająco głosów do uruchomienia WBFT po timeout. */
     public boolean hasEnoughVotesForWbft() {
         return votes.size() >= MIN_VOTES_FOR_EARLY_WBFT;
     }
 
-    /** Czy runda przekroczyła maksymalny czas oczekiwania? */
+    /** Czy runda przekroczyła limit czasu. */
     public boolean isTimedOut() {
-        return System.currentTimeMillis() - startTime >= ROUND_TIMEOUT_MS;
+        return ageMs() > ROUND_TIMEOUT_MS;
     }
 
-    /** Ile milisekund upłynęło od startu rundy. */
-    public long ageMs() {
-        return System.currentTimeMillis() - startTime;
+    // ── Odczyty ───────────────────────────────────────────────────────────────
+
+    public boolean isFinished()    { return finished.get(); }
+    public int     getUserId()     { return userId; }
+    public String  getRoundId()    { return roundId; }
+    public int     getVoteCount()  { return votes.size(); }
+    public long    ageMs()         { return System.currentTimeMillis() - startTime; }
+
+    public Map<String, ServiceMessage> getVotes() {
+        return votes;
     }
 
     /**
-     * Lista serwisów, które NIE oddały głosu.
-     * Używana przez monitor i do oznaczania węzłów timedOut w WbftResult.
+     * Zwraca listę serwisów, od których nie otrzymano głosu.
      */
-    public java.util.List<String> missingSenders(java.util.List<String> allServices) {
+    public List<String> missingSenders(List<String> allServices) {
+        Set<String> received = votes.keySet();
         return allServices.stream()
-                .filter(s -> !votes.containsKey(s))
-                .toList();
+                .filter(s -> !received.contains(s))
+                .sorted()
+                .collect(Collectors.toList());
     }
-
-    /* ── gettery ── */
-
-    public int getUserId()                           { return userId; }
-    public long getStartTime()                       { return startTime; }
-    public boolean isFinished()                      { return finished; }
-    public Map<String, ServiceMessage> getVotes()    { return Collections.unmodifiableMap(votes); }
-    public int getVoteCount()                        { return votes.size(); }
 }
